# aprg

./: .clang-format  .clang-tidy  .cmake-format.json  .flake8  .pylintrc  .shellcheckrc  CPPLINT.cfg  DeleteThis.txt  GitCommands.txt  GitNotes.txt  cppcheck-suppressions.txt  delete_this.txt
AprgAlgebra/AprgAlgebra/: CMakeLists.txt  StaticAnalysisAutoFix.txt  StaticAnalysisReport.txt
AprgAlgebra/AprgAlgebra/cmake/: FindFilesAndDirectories.cmake  SpecificStepsAsExecutable.cmake  SpecificStepsAsLibrary.cmake
AprgAudio/AprgAudio/: CMakeLists.txt  StaticAnalysisAutoFix.txt  StaticAnalysisReport.txt
AprgAudio/AprgAudio/cmake/: FindFilesAndDirectories.cmake  SpecificStepsAsExecutable.cmake
AprgAudio/AprgAudio/main/: main.cpp
AprgAudio/AprgAudio/src/: AprgAudio.cpp  AprgAudio.hpp
AprgAudio/AprgAudio/tst/: AprgAudio_unit.cpp
AprgAudioManipulator/AprgAudioManipulator/: CMakeLists.txt  StaticAnalysisAutoFix.txt  StaticAnalysisReport.txt
AprgAudioManipulator/AprgAudioManipulator/cmake/: FindFilesAndDirectories.cmake  SpecificStepsAsExecutable.cmake  SpecificStepsAsLibrary.cmake
AprgAudioManipulator/AprgAudioManipulator/src/: AprgAudioManipulator.hpp
AprgAudioManipulator/AprgAudioManipulator/tst/: AprgAudioManipulator_unit.cpp
AprgBitmapManipulator/AprgBitmapManipulator/: CMakeLists.txt  StaticAnalysisAutoFix.txt  StaticAnalysisReport.txt
AprgBitmapManipulator/AprgBitmapManipulator/cmake/: FindFilesAndDirectories.cmake  SpecificStepsAsExecutable.cmake
AprgCodeUtilities/AprgCodeUtilities/: CMakeLists.txt  StaticAnalysisAutoFix.txt  StaticAnalysisReport.txt
AprgCodeUtilities/AprgCodeUtilities/cmake/: FindFilesAndDirectories.cmake  SpecificStepsAsExecutable.cmake  SpecificStepsAsLibrary.cmake
AprgCodeUtilities/AprgCodeUtilities/main/: main.cpp
AprgCommon/AprgCommon/: CMakeLists.txt  StaticAnalysisAutoFix.txt  StaticAnalysisReport.txt
AprgCommon/AprgCommon/cmake/: FilesAndDirectories.cmake  FindFilesAndDirectories.cmake  ProcessFiles.cmake  SpecificStepsAsExecutable.cmake  SpecificStepsAsLibrary.cmake
AprgCommon/AprgCommon/src/: AlbaFileReader.cpp  AlbaOptional.hpp  AlbaStringHelper.cpp  AlbaStringHelper.hpp  AlbaWindowsTimer.cpp
AprgCommon/AprgCommon/tst/: AlbaContainerHelper_unit.cpp  AlbaDisplayTable_unit.cpp  AlbaFileReader_unit.cpp  AlbaLargeSorter_unit.cpp  AlbaMacroArgumentCounter_unit.cpp  AlbaMacros_unit.cpp  AlbaMemoryBuffer_unit.cpp  AlbaOptional_unit.cpp  AlbaPathHandler_unit.cpp  AlbaRaiiafPointer_unit.cpp  AlbaStringHelper_unit.cpp  AlbaUserAutomation_unit.cpp  AlbaWindowsTimer_unit.cpp  AlbaWindowsUserAutomation_unit.cpp
AprgCommon/AprgCommon/tstUtilities/: .clang-tidy
AprgFileExtractor/AprgFileExtractor/: CMakeLists.txt  StaticAnalysisAutoFix.txt  StaticAnalysisReport.txt
AprgFileExtractor/AprgFileExtractor/cmake/: AddDefinitions.cmake  FilesAndDirectories.cmake  FindFilesAndDirectories.cmake  SpecificStepsAsExecutable.cmake  SpecificStepsAsLibrary.cmake
AprgFileExtractor/AprgFileExtractor/main/: main.cpp
AprgFileExtractor/AprgFileExtractor/src/: AprgFileExtractor.cpp  AprgFileExtractor.hpp  main.cpp
AprgFileExtractor/AprgFileExtractor/tst/: AprgFileExtractor_unit.cpp
AprgGnuPlot/AprgGnuPlot/: CMakeLists.txt  StaticAnalysisAutoFix.txt  StaticAnalysisReport.txt
AprgGnuPlot/AprgGnuPlot/cmake/: FindFilesAndDirectories.cmake  SpecificStepsAsExecutable.cmake  SpecificStepsAsLibrary.cmake
AprgGnuPlot/AprgGnuPlot/src/: gnuplot-iostream.h
AprgGnuPlot/AprgGnuPlot/tst/: AprgAlgebra_unit.cpp  example-interactive.cc  example-misc.cc  test-noncopyable.cc  test-outputs.cc
AprgGraph/AprgGraph/: CMakeLists.txt  StaticAnalysisAutoFix.txt  StaticAnalysisReport.txt
AprgGraph/AprgGraph/cmake/: FilesAndDirectories.cmake  FindFilesAndDirectories.cmake  SpecificStepsAsExecutable.cmake  SpecificStepsAsLibrary.cmake
AprgGraph/AprgGraph/src/: AprgGraph.cpp  AprgGraph.hpp
AprgGraph/AprgGraph/tst/: AprgGraph_unit.cpp
AprgGrepStringEvaluator/AprgGrepStringEvaluator/: CMakeLists.txt  StaticAnalysisAutoFix.txt  StaticAnalysisReport.txt
AprgGrepStringEvaluator/AprgGrepStringEvaluator/cmake/: FindFilesAndDirectories.cmake  SpecificStepsAsExecutable.cmake  SpecificStepsAsLibrary.cmake
AprgGsl/AprgGsl/: CMakeLists.txt
AprgGsl/AprgGsl/cmake/: FilesAndDirectories.cmake  FindFilesAndDirectories.cmake  SpecificStepsAsExecutable.cmake  (+1 more)
AprgLocalUserAutomation/AprgLocalUserAutomation/: CMakeLists.txt  StaticAnalysisAutoFix.txt  StaticAnalysisReport.txt
AprgModelling/AprgModelling/: CMakeLists.txt  StaticAnalysisAutoFix.txt  StaticAnalysisReport.txt
AprgProcessFiles/AprgProcessFiles/: CMakeLists.txt  StaticAnalysisAutoFix.txt  StaticAnalysisReport.txt
AprgStatistics/AprgStatistics/: CMakeLists.txt  StaticAnalysisAutoFix.txt  StaticAnalysisReport.txt
AprgUniqueProblems/AprgUniqueProblems/: CMakeLists.txt  StaticAnalysisAutoFix.txt  StaticAnalysisReport.txt
Boost/Boost/: BoostGuide.txt  BoostGuideInWindows.txt  CMakeLists.txt
CPlusPlusExamples/CPlusPlusExamples/: CMakeLists.txt  StaticAnalysisAutoFix.txt  StaticAnalysisReport.txt
DesignPatterns/DesignPatterns/: CMakeLists.txt  StaticAnalysisAutoFix.txt  StaticAnalysisReport.txt
FileDestructor/FileDestructor/: CMakeLists.txt
QuickestWayToProgram/QuickestWayToProgram/: CMakeLists.txt  StaticAnalysisAutoFix.txt  StaticAnalysisReport.txt
SOOSA/SOOSA/: CMakeLists.txt  StaticAnalysisAutoFix.txt  StaticAnalysisReport.txt
SOOSA/SOOSA/src/: SOOSA.c  (+10 more)
TddLecture/TddLecture/: CMakeLists.txt  StaticAnalysisAutoFix.txt  StaticAnalysisReport.txt
TemplateForLibraries/TemplateForLibraries/: CMakeLists.txt  StaticAnalysisAutoFix.txt  StaticAnalysisReport.txt
TemplateForPrograms/TemplateForPrograms/: CMakeLists.txt  StaticAnalysisAutoFix.txt  StaticAnalysisReport.txt
WcdmaTools/WcdmaToolsBackend/: CMakeLists.txt  StaticAnalysisAutoFix.txt  StaticAnalysisReport.txt
benchmark/BenchmarkTest/: CMakeLists.txt  StaticAnalysisAutoFix.txt  StaticAnalysisReport.txt
benchmark/benchmark/: CMakeLists.txt
jsonLibrary/JsonLibraryTest/: CMakeLists.txt  StaticAnalysisAutoFix.txt  StaticAnalysisReport.txt
(+7008 files in other folders)
